--- a/Varghese_PaymentGateway.API_TEST/Varghese_Demo.API_TEST.csproj
+++ b/Varghese_PaymentGateway.API_TEST/Varghese_Demo.API_TEST.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Varghese_PaymentGateway.API\Varghese_PaymentGateway.API.csproj" />
+    <ProjectReference Include="..\Varghese_PaymentGateway.API\Varghese_Demo.API.csproj" />
   </ItemGroup>
 
 </Project>
