--- a/Varghese_Demo.API/Properties/launchSettings.json
+++ b/Varghese_Demo.API/Properties/launchSettings.json
@@ -16,7 +16,7 @@
       },
       "applicationUrl": "http://localhost:55555"
     },
-    "Varghese_Demo.API": {
+    "CodeDemo.API": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "weatherforecast",
